[gd_scene load_steps=3 format=3 uid="uid://d4gavbodoq2pu"]

[ext_resource type="Script" path="res://common/websocket/websocket-client.gd" id="2_fln2y"]
[ext_resource type="Script" path="res://test-webocket.gd" id="3_6xfv6"]

[node name="TestScene" type="Node2D"]
script = ExtResource("3_6xfv6")

[node name="WebSocketClient" type="Node" parent="."]
script = ExtResource("2_fln2y")

[node name="Label_ID" type="Label" parent="."]
offset_left = 6.0
offset_top = 8.0
offset_right = 28.0
offset_bottom = 31.0
text = "ID:"

[node name="Id Field" type="Label" parent="."]
offset_left = 31.0
offset_top = 10.0
offset_right = 133.0
offset_bottom = 33.0

[node name="Status" type="Label" parent="."]
offset_left = 355.0
offset_top = 11.0
offset_right = 457.0
offset_bottom = 34.0

[node name="Connect" type="Button" parent="."]
offset_left = 24.0
offset_top = 65.0
offset_right = 32.0
offset_bottom = 73.0
text = "Connect to Server"

[node name="Disconnect" type="Button" parent="."]
offset_left = 24.0
offset_top = 107.0
offset_right = 170.0
offset_bottom = 138.0
text = "Disconnect"

[node name="Send" type="Button" parent="."]
offset_left = 29.0
offset_top = 226.0
offset_right = 89.0
offset_bottom = 257.0
text = "Send"

[node name="TextEdit" type="TextEdit" parent="."]
offset_left = 92.0
offset_top = 218.0
offset_right = 278.0
offset_bottom = 267.0
placeholder_text = "Place Some Text"

[node name="Incomming Text" type="Label" parent="."]
offset_left = 16.0
offset_top = 169.0
offset_right = 145.0
offset_bottom = 192.0
text = "Incomming Text:"

[node name="Income Text Field" type="Label" parent="."]
offset_left = 151.0
offset_top = 171.0
offset_right = 253.0
offset_bottom = 194.0

[connection signal="general_message_recieved" from="WebSocketClient" to="." method="_on_web_socket_client_general_message_recieved"]
[connection signal="pressed" from="Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="Disconnect" to="." method="_on_disconnect_pressed"]
[connection signal="pressed" from="Send" to="." method="_on_send_pressed"]
